[project]
name = "at-data-tools"
version = "0.1.4"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bear-lake>=0.1.5",
    "numpy>=2.4.2",
    "polars>=1.38.1",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
    "rich>=14.3.2",
]
